Added favicon icon

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,14 @@
         content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="keywords" content="Pilaniya Road Carriers">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <!-- <link rel="icon" href="images/favicon.ico" type="image/x-icon"> -->
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css?family=Hind:400,300,700%7CMontserrat:400,700">
@@ -116,10 +123,37 @@
                                 <div class="rd-navbar-mobile-scroll">
                                     <div class="rd-navbar-mobile-header-wrap">
                                         <!--Navbar Brand Mobile-->
-                                        <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='165'
-                                                    height='76' src='images/logo-light-165x76.png' alt='' /></a><a
-                                                class="rd-navbar-mobile-search-toggle mdi"
-                                                data-custom-toggle="rd-navbar-search-mobile" href="#"><span></span></a>
+                                        <div class="rd-navbar-mobile-brand"><a href="index.html"><svg
+                                                    viewBox="0 0 320 68.69428731572131" height="68.69428731572131"
+                                                    width="320"
+                                                    style="width: 165px; height: 76px; top: 50%; left: 50%; transform: translate(6%, 3%) scale(0.999); z-index: 0; cursor: pointer;">
+                                                    <defs id="SvgjsDefs1046"></defs>
+                                                    <g id="SvgjsG1047" featurekey="symbolFeature-0"
+                                                        transform="matrix(0.78125,0,0,0.78125,0,-15.405637562274933)"
+                                                        fill="#ffffff">
+                                                        <title xmlns="http://www.w3.org/2000/svg">Transportation 2
+                                                            solid</title>
+                                                        <path xmlns="http://www.w3.org/2000/svg"
+                                                            d="M14.97662,107c2.23334,0,3.8028-1.8316,4.777-4.42267L15.532,102.205a2.64629,2.64629,0,0,1-.55536.74628,2.8359,2.8359,0,0,1-.61206-.84918l-4.46069-.39343C10.84021,104.7514,12.50085,107,14.97662,107Z">
+                                                        </path>
+                                                        <path xmlns="http://www.w3.org/2000/svg"
+                                                            d="M111.9967,69.89417c-4.05426,0-6.57281,4.44958-6.57281,11.61243S107.94244,93.119,111.9967,93.119s6.57275-4.44958,6.57275-11.61237S116.0509,69.89417,111.9967,69.89417Zm0,19.22583c-1.42047,0-2.572-3.40863-2.572-7.6134s1.15149-7.61346,2.572-7.61346,2.5719,3.40869,2.5719,7.61346S113.41718,89.12,111.9967,89.12Z">
+                                                        </path>
+                                                        <path xmlns="http://www.w3.org/2000/svg"
+                                                            d="M67.98761,80.007c-5.16217,0-7.00146,6.71368-7.00146,12.99664s1.83929,12.99664,7.00146,12.99664S74.989,99.28662,74.989,93.0036,73.14972,80.007,67.98761,80.007Zm0,21.99432c-1.65723,0-3.00067-4.02838-3.00067-8.99768s1.34344-8.99768,3.00067-8.99768,3.00061,4.02838,3.00061,8.99768S69.64478,102.00128,67.98761,102.00128Z">
+                                                        </path>
+                                                        <path xmlns="http://www.w3.org/2000/svg"
+                                                            d="M1.82458,96.97119l34.007,2.99927c.05865.00537.11725.00781.17584.00781.09473,0,21.2876-3.01929,21.2876-3.01929a1.99945,1.99945,0,0,0,1.71716-1.97943V84.101a7.98361,7.98361,0,0,1,7.15869-7.953l.1153-.0127c3.46948-.3681,6.46912-.55408,8.0788.91333,1.13208,1.03052,1.68787,3.01825,1.65076,5.934v.99976a2.00048,2.00048,0,0,0,2.74567,1.85547l3.22906-1.2962v.464a1.99992,1.99992,0,0,0,2.00043,1.99951,1.97009,1.97009,0,0,0,.32916-.02734l17.22131-2.8689c-.06927-.82672-.11755-1.68237-.11755-2.60211,0-11.52393,5.69531-15.61279,10.57324-15.61279,4.74524,0,10.24945,3.89215,10.54413,14.71655l3.78754-.63092A1.99989,1.99989,0,0,0,128,78.00751V52.01422a1.999,1.999,0,0,0-1.008-1.73584L74.91492,21.21252a2.03,2.03,0,0,0-1.06567-.207L37.8418,24.00476a2.0004,2.0004,0,0,0-1.723,1.33563l-2.04919,5.88422L22.36792,34.669A2.00021,2.00021,0,0,0,21.144,35.69269L18.14343,41.6911a2,2,0,0,0,1.78943,2.8938h.3819l-2.24139,8.21252L9.30475,59.02332A7.01466,7.01466,0,0,0,2.983,65.96362L2.93365,83.05725l-.75745-.06677A1.99993,1.99993,0,0,0,0,84.98212v9.99744A1.9996,1.9996,0,0,0,1.82458,96.97119ZM75.98926,26.23041l5.95642,2.99811V80.25043l-1.98773.79767c-.23932-3.11884-1.19458-5.40485-2.89807-6.95569a7.34658,7.34658,0,0,0-1.07062-.801ZM24.63879,43.99725C37.4295,42.8877,56.6698,41.699,63.31573,42.42981L60.45282,50.933l-37.53119.619ZM6.98389,65.97681a2.99965,2.99965,0,0,1,2.87927-2.97668c.03259.00159.06421.01129.0968.01129.05182,0,.10248-.01953.1543-.02356H30.99078a2.99985,2.99985,0,0,1,3.00061,3.009l-.05109,19.79492L6.93353,83.41Zm-2.983,21.18884L35.8316,89.973a1.97693,1.97693,0,0,0,.45911-.01221l18.7207-2.67316v5.95795l-19.05865,2.721L4.00085,93.1485Z">
+                                                        </path>
+                                                    </g>
+                                                    <g id="SvgjsG1048" featurekey="nameFeature-0"
+                                                        transform="matrix(2.6219192868456354,0,0,2.6219192868456354,117.37808071315436,-38.07026924521803)"
+                                                        fill="#ffffff">
+                                                        <path
+                                                            d="M11.48 31 l0 5.52 c0 1 0.68 1.28 2.96 1.44 l0 2.04 c-4.48 -0.12 -8.92 -0.12 -13.44 0 l0 -2.04 c2.32 -0.16 3 -0.44 3 -1.44 l0 -18.2 c0 -0.88 -0.84 -1.04 -2.6 -1.16 l0 -2 c4.28 0.16 8.2 0 10.24 0 c9.48 0 12.88 2.52 12.88 7.44 c0 4.76 -3.88 7.28 -12.4 8.36 z M11.48 28.84 l0.36 0 c4.12 -0.16 5.88 -2.64 5.88 -6.08 c0 -3.56 -1.28 -5.6 -4.64 -5.6 l-1.6 0 l0 11.68 z M46.76 33.24 c1.76 3 3.36 4.84 5.92 5.04 l-1.2 2.04 c-2.6 0 -6.96 0.56 -10.52 -4.64 l-3.32 -4.92 l-0.64 0.12 l0 5.64 c0 1 0.68 1.28 2.96 1.44 l0 2.04 c-4.48 -0.12 -8.92 -0.12 -13.44 0 l0 -2.04 c2.32 -0.16 3 -0.44 3 -1.44 l0 -18.2 c0 -0.88 -0.84 -1.04 -2.6 -1.16 l0 -2 c4.28 0.16 8.48 0 10.52 0 c9.2 0 12.72 2.52 12.72 7.4 c0 2.96 -1.92 5.12 -5.88 6.6 z M37 17.16 l0 11.52 l0.4 -0.04 c3.8 -0.68 5.96 -2.64 5.96 -6.24 c0 -3.32 -1.6 -5.24 -4.6 -5.24 l-1.76 0 z M74.64 33.2 l2.64 0 c-1 3.68 -4.12 7.52 -10.72 7.52 c-8.12 0 -13.52 -4.76 -13.52 -13.2 c0 -7.52 5.76 -13 12.72 -13 c3.52 0 4.92 1.08 7.04 1.08 c0.6 0 1.04 0 2.6 -0.4 c0.04 2.36 0.6 4.84 1.56 7.12 l-4 0 c-1.64 -3.16 -4 -5.52 -6.84 -5.52 c-4 0 -5.2 3.92 -5.2 9.6 c0 6.24 2 11.96 7.12 11.96 c2.08 0 5.12 -1 6.6 -5.16 z">
+                                                        </path>
+                                                    </g>
+                                                </svg></a>
                                         </div>
                                         <!--RD Navbar Mobile Search-->
                                         <div class="rd-navbar-search-mobile" id="rd-navbar-search-mobile">
@@ -187,8 +221,7 @@
                                                     class="font-default text-light text-spacing-20 veil reveal-sm-block">
                                                     We help people save time, make their life better, exercising
                                                     communications, both in business and in private life.</h4>
-                                                <h4 class="font-default text-light text-spacing-20 veil-sm">Learn more
-                                                    about Transitec</h4>
+
                                             </div>
                                             <!-- <div class="offset-top-20" data-caption-animate="fadeInUp"
                                                 data-caption-delay="200"><a
@@ -216,8 +249,7 @@
                                                     class="font-default text-light text-spacing-20 veil reveal-sm-block">
                                                     We strive to ensure that our services have become a benchmark of
                                                     quality in the field of the delivery.</h4>
-                                                <h4 class="font-default text-light text-spacing-20 veil-sm">Learn more
-                                                    about Transitec</h4>
+
                                             </div>
                                             <!-- <div class="offset-top-20" data-caption-animate="fadeInUp"
                                                 data-caption-delay="200"><a
@@ -268,7 +300,7 @@
                                     <div class="range range-xs-center range-lg-left">
                                         <div class="cell-lg-7 text-lg-left cell-xs-10">
                                             <div data-caption-animate="fadeInUp" data-caption-delay="200">
-                                                <h1><a href="#">Crane</a></h1>
+                                                <h1><a href="#">Crane Service</a></h1>
                                             </div>
                                             <div class="offset-top-30" data-caption-animate="fadeInUp"
                                                 data-caption-delay="300">
