--- a/about-us.html
+++ b/about-us.html
@@ -107,7 +107,7 @@
                                                     href="mailto:#">rspilaniya@gmail.com</a></li>
                                             <li class="reveal-md-inline-block"><span
                                                     class="icon icon-xxs fa-clock-o text-middle icon-primary"></span><span
-                                                    class="inset-left-10 text-middle">Mon–Sat: 8:00AM–8:00PM</span></li>
+                                                    class="inset-left-10 text-middle">Mon–Sun: 24*7</span></li>
                                             <li class="reveal-md-inline-block"><span
                                                     class="icon icon-xxs fa-phone text-middle icon-primary"></span><a
                                                     class="inset-left-10 text-middle">9325222862 / 7588306089</a>
