--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@
                             <button class="rd-navbar-toggle"
                                 data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap"><span></span></button>
                             <div class="rd-navbar-panel-title">
-                                <h4>About US</h4>
+                                <h4>About us</h4>
                             </div>
                             <!-- RD Navbar Right Side Toggle-->
                             <button class="rd-navbar-right-side-toggle veil-md"
@@ -176,7 +176,7 @@
                                     <ul class="rd-navbar-nav">
                                         <li><a href="index.html">Home</a>
                                         </li>
-                                        <li class=" active"><a href="about-us.html">About US</a>
+                                        <li class=" active"><a href="about-us.html">About us</a>
 
                                         </li>
                                         <li class=" tabs-nav"><a href="services.html">Services</a>
@@ -189,7 +189,7 @@
                                         </li>
 
 
-                                        <li><a href="contacts.html">Contacts</a>
+                                        <li><a href="contacts.html">Contact us</a>
 
                                     </ul>
                                 </div>
@@ -208,11 +208,11 @@
                 <!-- Classic Breadcrumbs-->
                 <section class="breadcrumb-classic context-dark">
                     <div class="shell section-35 section-lg-top-85 text-sm-left">
-                        <h1 class="veil reveal-sm-block">About Us</h1>
+                        <h1 class="veil reveal-sm-block">About us</h1>
                         <div class="offset-lg-top-75 offset-sm-top-40">
                             <ul class="list-inline list-inline-lg list-inline-dashed p">
                                 <li><a class="text-light" href="index.html">Home</a></li>
-                                <li class="text-light">About Us
+                                <li class="text-light">About us
                                 </li>
                             </ul>
                         </div>
