--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
                             <button class="rd-navbar-toggle"
                                 data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap"><span></span></button>
                             <div class="rd-navbar-panel-title">
-                                <h4>Contacts</h4>
+                                <h4>Contact us</h4>
                             </div>
                             <!-- RD Navbar Right Side Toggle-->
                             <button class="rd-navbar-right-side-toggle veil-md"
@@ -153,7 +153,7 @@
                                     <ul class="rd-navbar-nav">
                                         <li><a href="index.html">Home</a>
                                         </li>
-                                        <li><a href="about-us.html">About US</a>
+                                        <li><a href="about-us.html">About us</a>
                                         </li>
                                         <li class=" tabs-nav"><a href="services.html">Services</a>
                                             <!-- <ul class="rd-navbar-dropdown">
@@ -165,7 +165,7 @@
                                         </li>
 
 
-                                        <li class=" active"><a href="contacts.html">Contacts</a>
+                                        <li class=" active"><a href="contacts.html">Contact us</a>
 
                                         </li>
 
@@ -188,11 +188,11 @@
                 <!-- Classic Breadcrumbs-->
                 <section class="breadcrumb-classic context-dark">
                     <div class="shell section-35 section-lg-top-85 text-sm-left">
-                        <h1 class="veil reveal-sm-block">Contacts US</h1>
+                        <h1 class="veil reveal-sm-block">Contact us</h1>
                         <div class="offset-lg-top-75 offset-sm-top-40">
                             <ul class="list-inline list-inline-lg list-inline-dashed p">
                                 <li><a class="text-light" href="index.html">Home</a></li>
-                                <li class="text-light">Contacts US
+                                <li class="text-light">Contact us
                                 </li>
                             </ul>
                         </div>
