--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <ul class="rd-navbar-nav">
                                         <li class=" active"><a href="index.html">Home</a>
                                         </li>
-                                        <li><a href="about-us.html">About US</a>
+                                        <li><a href="about-us.html">About us</a>
                                         </li>
                                         <li class=" tabs-nav"><a href="services.html">Services</a>
                                             <!-- <ul class="rd-navbar-dropdown">
@@ -186,7 +186,7 @@
                                         </li>
 
 
-                                        <li><a href="contacts.html">Contacts</a>
+                                        <li><a href="contacts.html">Contact us</a>
 
                                         </li>
 
