--- a/services.html
+++ b/services.html
@@ -174,7 +174,7 @@
                                     <ul class="rd-navbar-nav">
                                         <li><a href="index.html">Home</a>
                                         </li>
-                                        <li><a href="about-us.html">About US</a>
+                                        <li><a href="about-us.html">About us</a>
 
                                         </li>
                                         <li class=" active tabs-nav"><a href="services.html">Services</a>
@@ -187,7 +187,7 @@
                                         </li>
 
 
-                                        <li><a href="contacts.html">Contacts</a>
+                                        <li><a href="contacts.html">Contact us</a>
                                         </li>
 
                                     </ul>
