--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="keywords" content="Pilaniya Road Carriers">
+    <meta name="keywords"
+        content="Pilaniya Road Carriers, transportation, transport, crane, movers and packers, movers and packers nashik, nashik, warehouse ">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
