--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Site Title-->
     <title>Pilaniya Road Carriers</title>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="HJI1Tz8nKYXzCXgEYYbhxwr9c_M8k1Td1P_sFLYo4-Q" />
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
