--- a/about-us.html
+++ b/about-us.html
@@ -6,12 +6,12 @@
     <title>Pilaniya Road Carriers</title>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="HJI1Tz8nKYXzCXgEYYbhxwr9c_M8k1Td1P_sFLYo4-Q" />
-    <meta name="format-detection" content="telephone=no">
+
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="keywords"
-        content="Pilaniya Road Carriers, transportation, transport, crane, movers and packers, movers and packers nashik, nashik, warehouse">
+        content="Pilaniya Road Carriers Nashik, Transportation in Nashik, Logistics in Nashik, Transport Service in Nashik, Packers and movers in Nashik, Crane Services in Nashik, Transport and Logistics, Household goods transport service Nashik,Top transporter in Nashik, Top packers and movers in Nashik">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -103,17 +103,17 @@
                                             <!-- <li class="reveal-md-inline-block"><span></span><a
                                                     class="inset-left-10 text-middle" href="mailto:#"><img width='165'
                                                         height='76' src='images/logo-2.jpeg' alt='' /></a></li> -->
-                                            <li class="reveal-md-inline-block"><span
+                                            <!-- <li class="reveal-md-inline-block"><span
                                                     class="icon icon-xxs fa-envelope-o text-middle icon-primary"></span><a
                                                     class="inset-left-10 text-middle"
-                                                    href="mailto:#">rspilaniya@gmail.com</a></li>
-                                            <li class="reveal-md-inline-block"><span
+                                                    href="mailto:#">rspilaniya@gmail.com</a></li> -->
+                                            <!-- <li class="reveal-md-inline-block"><span
                                                     class="icon icon-xxs fa-clock-o text-middle icon-primary"></span><span
-                                                    class="inset-left-10 text-middle">Mon–Sun: 24*7</span></li>
-                                            <li class="reveal-md-inline-block"><span
+                                                    class="inset-left-10 text-middle">Mon–Sun: 24*7</span></li> -->
+                                            <!-- <li class="reveal-md-inline-block"><span
                                                     class="icon icon-xxs fa-phone text-middle icon-primary"></span><a
                                                     class="inset-left-10 text-middle">9325222862 / 7588306089</a>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                 </div>
