--- a/about-us.html
+++ b/about-us.html
@@ -53,8 +53,8 @@
                                 <h4>About us</h4>
                             </div>
                             <!-- RD Navbar Right Side Toggle-->
-                            <button class="rd-navbar-right-side-toggle veil-md"
-                                data-rd-navbar-toggle=".right-side"><span></span></button>
+                            <!-- <button class="rd-navbar-right-side-toggle veil-md"
+                                data-rd-navbar-toggle=".right-side"><span></span></button> -->
                             <div class="shell">
                                 <div class="range range-md-middle range-lg-top">
                                     <div class="cell-md-3 left-side">
@@ -312,7 +312,8 @@
                 <div class="cell-xs-10 cell-md-6 cell-md-push-2 offset-top-20 offset-md-top-0">
                     <!-- {%FOOTER_LINK}-->
                     <p class="text-gray">&copy; <span id="copyright-year"></span> All Rights Reserved Terms of Use
-                        @Developed By Aishvarya Shrivastava</p>
+                        <!-- @Developed By Aishvarya Shrivastava -->
+                    </p>
                 </div>
             </div>
         </div>
