--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <h4>Home</h4>
                             </div>
                             <!-- RD Navbar Right Side Toggle-->
-                            <!-- <button class="rd-navbar-right-side-toggle veil-md"
+                            <!-- <button class="rd-navbar-right-side-toggle veil--md"
                                 data-rd-navbar-toggle=".right-side"><span></span></button> -->
                             <div class="shell">
                                 <div class="range range-md-middle range-lg-top">
@@ -220,16 +220,16 @@
                                             <div class="offset-top-30" data-caption-animate="fadeInUp"
                                                 data-caption-delay="150">
                                                 <h4
-                                                    class="font-default text-light text-spacing-20 veil reveal-sm-block">
+                                                    class="font-default text-light text-spacing-20 veil-- reveal-sm-block">
                                                     We help people save time, make their life better, exercising
                                                     communications, both in business and in private life.</h4>
 
                                             </div>
                                             <!-- <div class="offset-top-20" data-caption-animate="fadeInUp"
                                                 data-caption-delay="200"><a
-                                                    class="btn btn-default btn-sm veil reveal-lg-inline-block"
+                                                    class="btn btn-default btn-sm veil- reveal-lg-inline-block"
                                                     href="about-us.html">learn more</a><a
-                                                    class="btn btn-primary btn-sm veil-lg" href="#"
+                                                    class="btn btn-primary btn-sm veil--lg" href="#"
                                                     data-custom-toggle="quote-form">Request a Quote</a></div> -->
                                         </div>
                                     </div>
@@ -248,16 +248,16 @@
                                             <div class="offset-top-30" data-caption-animate="fadeInUp"
                                                 data-caption-delay="150">
                                                 <h4
-                                                    class="font-default text-light text-spacing-20 veil reveal-sm-block">
+                                                    class="font-default text-light text-spacing-20 veil- reveal-sm-block">
                                                     We strive to ensure that our services have become a benchmark of
                                                     quality in the field of the delivery.</h4>
 
                                             </div>
                                             <!-- <div class="offset-top-20" data-caption-animate="fadeInUp"
                                                 data-caption-delay="200"><a
-                                                    class="btn btn-default btn-sm veil reveal-lg-inline-block"
+                                                    class="btn btn-default btn-sm veil- reveal-lg-inline-block"
                                                     href="about-us.html">learn more</a><a
-                                                    class="btn btn-primary btn-sm veil-lg" href="#"
+                                                    class="btn btn-primary btn-sm veil--lg" href="#"
                                                     data-custom-toggle="quote-form">Request a Quote</a></div> -->
                                         </div>
                                     </div>
@@ -276,18 +276,18 @@
                                             <div class="offset-top-30" data-caption-animate="fadeInUp"
                                                 data-caption-delay="300">
                                                 <h4
-                                                    class="font-default text-light text-spacing-20 veil reveal-sm-block">
+                                                    class="font-default text-light text-spacing-20 veil- reveal-sm-block">
                                                     For the industry folks relocating or joining to their new companies,
                                                     we also deliver household goods with safe packaging
                                                     solutions.</h4>
-                                                <!-- <h4 class="font-default text-light text-spacing-20 veil-sm">Learn more
+                                                <!-- <h4 class="font-default text-light text-spacing-20 veil--sm">Learn more
                                                     about Transitec</h4> -->
                                             </div>
                                             <!-- <div class="offset-top-20" data-caption-animate="fadeInUp"
                                                 data-caption-delay="500"><a
-                                                    class="btn btn-default btn-sm veil reveal-lg-inline-block"
+                                                    class="btn btn-default btn-sm veil- reveal-lg-inline-block"
                                                     href="about-us.html"> learn more</a><a
-                                                    class="btn btn-primary btn-sm veil-lg" href="#"
+                                                    class="btn btn-primary btn-sm veil--lg" href="#"
                                                     data-custom-toggle="quote-form">Request a Quote</a></div> -->
                                         </div>
                                     </div>
@@ -307,19 +307,19 @@
                                             <div class="offset-top-30" data-caption-animate="fadeInUp"
                                                 data-caption-delay="300">
                                                 <h4
-                                                    class="font-default text-light text-spacing-20 veil reveal-sm-block">
+                                                    class="font-default text-light text-spacing-20 veil- reveal-sm-block">
                                                     We offer crane services to our customers as per their timely
                                                     requirements and on contract basis. Through our crane
                                                     service of hydra ,farana , forklift and other mobile cranes we can
                                                     safely load and unload heavy dimensional cargo.</h4>
-                                                <!-- <h4 class="font-default text-light text-spacing-20 veil-sm">Learn more
+                                                <!-- <h4 class="font-default text-light text-spacing-20 veil--sm">Learn more
                                                                             about Transitec</h4> -->
                                             </div>
                                             <!-- <div class="offset-top-20" data-caption-animate="fadeInUp"
                                                                         data-caption-delay="500"><a
-                                                                            class="btn btn-default btn-sm veil reveal-lg-inline-block"
+                                                                            class="btn btn-default btn-sm veil- reveal-lg-inline-block"
                                                                             href="about-us.html"> learn more</a><a
-                                                                            class="btn btn-primary btn-sm veil-lg" href="#"
+                                                                            class="btn btn-primary btn-sm veil--lg" href="#"
                                                                             data-custom-toggle="quote-form">Request a Quote</a></div> -->
                                         </div>
                                     </div>
@@ -504,18 +504,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="cell-sm-8 cell-md-4 offset-top-50 offset-md-top-0 margin-top-25">
+                <!-- <div class="cell-sm-8 cell-md-4 offset-top-50 offset-md-top-0 margin-top-25">
                     <div class="unit unit-md unit-md-horizontal text-md-left">
                         <div class="unit-left"><span
                                 class="icon icon-lg icon-circle icon-primary-filled fa-wrench"></span></div>
                         <div class="unit-body">
                             <h4 class="text-bold">Maintenance workshops 24*7</h4>
-                            <!-- <p>We have established a strong presence in the transportation industry. Our
-                                award-winning services earn a reputation for quality and excellence that few can
-                                rival.</p> -->
+                          
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="cell-sm-8 cell-md-4 offset-top-50 offset-md-top-0 margin-top-25">
                     <div class="unit unit-md unit-md-horizontal text-md-left">
                         <div class="unit-left"><span
@@ -564,6 +562,8 @@
                         </div>
                     </div>
                 </div>
+                <div class="cell-sm-8 cell-md-4 offset-top-50 offset-md-top-0 margin-top-25">
+                </div>
             </div>
         </div>
     </section>
@@ -573,7 +573,7 @@
         <div class="shell text-sm-left">
             <div class="range range-xs-center range-lg-right offset-top-0">
                 <div class="cell-xs-10 cell-sm-12 cell-lg-8 section-image-aside section-image-aside-left">
-                    <div class="section-image-aside-img veil reveal-lg-block"
+                    <div class="section-image-aside-img veil- reveal-lg-block"
                         style="background-image: url(images/home-01-746-561.jpg);"></div>
                     <div class="section-image-aside-body section-80 offset-lg-top-0 section-lg-90 inset-lg-left-100">
                         <h2>Our Mission:</h2>
