Added meta word and script

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="keywords"
         content="Pilaniya Road Carriers Nashik,Transportation in Nashik,Logistics in Nashik,Transport Service in Nashik,Packers and movers in Nashik,Crane Services in Nashik,Transport and Logistics,Household goods transport service Nashik,Top transporter in Nashik,Top packers and movers in Nashik">
+    <meta name="author" content="Pilaniya Road Carriers">
+    <meta name="description"
+        content="Pilaniya Road Carriers Nashik,Transportation in Nashik,Logistics in Nashik,Transport Service in Nashik,Packers and movers in Nashik,Crane Services in Nashik,Transport and Logistics,Household goods transport service Nashik,Top transporter in Nashik,Top packers and movers in Nashik">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -28,6 +31,7 @@
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="https://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src="js/html5shiv.min.js"></script>
 		<![endif]-->
+    <script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 </head>
 
 <body>
